Port configuration Gitlab.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -189,9 +189,10 @@ services:
       GITLAB_OMNIBUS_CONFIG: |
         external_url 'https://gitlab.$DOMAINNAME'
         nginx['listen_port'] = 80
+        gitlab_rails['gitlab_shell_ssh_port'] = 2222
     ports:
       - '8081:80'
-      - '22:22'
+      - '2222:22'
     volumes:
       - './data/gitlab/config:/etc/gitlab'
       - './data/gitlab/logs:/var/log/gitlab'
